feat: implement job application service (PROJ-S06) (#92)
